--- a/res/layout/data_layout.xml
+++ b/res/layout/data_layout.xml
@@ -37,6 +37,23 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/dataNotLoadedText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:text="@string/dataNotLoadedText"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/dataNotLoadedHelperText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:text="@string/dataNotLoadedHelperText"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
     <ListView
         android:id="@+id/dataList"
         android:layout_width="match_parent"
