--- a/res/layout/webcam_layout.xml
+++ b/res/layout/webcam_layout.xml
@@ -49,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="100"
+        android:minHeight="8dip"
         android:progress="0"
         android:visibility="invisible" />
 
